# PetriSpot

./: .gitignore  KERS.md  README.md  build.sh  buildPetriSpot.sh  build_ddd.sh  build_spot.sh  petri  petri128  petri32  petri64
.github/workflows/: linux.yml  osx.yml  windows.yml
Petri/: .autotools  .cproject  .gitignore  .project  NEWS  README  configure.ac
Petri/examples/: net1.pnml  net2.pnml
Petri/src/: Arithmetic.hpp  FlowMatrix.h  FlowPrinter.h  Heuristic.h  InvariantCalculator.h  InvariantHelpers.h  InvariantMiddle.cpp  InvariantMiddle.h  InvariantsTrivial.h  Makefile.am  MatrixCol.h  MatrixExporter.h  MixedSignsUniqueTable.h  PNMLExport.h  PTNetHandler.h  PTNetLoader.cpp  PTNetLoader.h  Petri.cpp  Petricube.h  Rational.h  ReducedFlow.h  RowSignDomination.h  RowSigns.h  SparseArray.h  SparseBoolArray.cpp  SparseBoolArray.h  SparseIntArray.h  SparseMatrixIO.h  SparsePetriNet.h  Walker.h  kersconv.cpp
Petri/src/expr/: AtomicPropManager.h  BinOp.h  BoolConstant.h  Constant.h  Expression.h  NaryOp.h  Op.h  Property.h  VarRef.h
Petri/src/expr/parse/: ExprHandler.h  ExprLoader.cpp  ExprLoader.h
Petri/src/parse/: PTNetHandler.h  PTNetLoader.h
Petri/src/src/: InvariantCalculator.h  InvariantMiddle.h  Makefile  Makefile.in  PTNetHandler.h  SparseIntArray.cpp  petri
Petri/test/: bench_kers.sh
Petri/tests/: Angiogenesis-PT-05-LTLC.out  model.pnml
PetriSage/: petrisage.py
